--- a/assets/theme.css
+++ b/assets/theme.css
@@ -604,6 +604,16 @@ footer {
   justify-content: space-between;
   padding: 30px;
 }
+@media (max-width: 768px) {
+  footer {
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+}
+@media (max-width: 576px) {
+  footer {
+    grid-template-columns: 1fr 1fr;
+  }
+}
 footer section h3 {
   font-size: 13px;
   font-weight: 500;
