--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -16,6 +16,7 @@
     {% comment %} {{ 'application.js' | asset_url | script_tag }} {% endcomment %}
     <script src="{{'splide.js' | asset_url}}" defer></script>
     <script src="{{'application.js' | asset_url}}" defer></script>
+    <script src="{{ 'banner-top' | asset_url }}" defer></script>
   </head>
   <body>
     {% section 'header' %}
