--- a/sections/instagram-slider.liquid
+++ b/sections/instagram-slider.liquid
@@ -4,6 +4,8 @@
     <h1 class="title-loop">instagram</h1>
     <h1 class="title-loop">instagram</h1>
     <h1 class="title-loop">instagram</h1>
+    <h1 class="title-loop">instagram</h1>
+    <h1 class="title-loop">instagram</h1>
   </div>
   <div class="instagram-images">
     <div class="splide instagram-latest-posts">
