changed react files

--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -17,6 +17,7 @@
     <script src="{{'splide.js' | asset_url}}" defer></script>
     <script src="{{'application.js' | asset_url}}" defer></script>
     <script src="{{ 'banner-top' | asset_url }}" defer></script>
+    {% comment %} <script src="https://cdn.jsdelivr.net/gh/amrinder-bhullar/bright@main/assets/banner-top.js" defer></script> {% endcomment %}
   </head>
   <body>
     {% section 'header' %}
