--- a/snippets/banner-top.liquid
+++ b/snippets/banner-top.liquid
@@ -1,2 +1,6 @@
-<div class="banner-top" id="banner-top"></div>
+<script>
+    // const bannerText = {{ collections['women'].products | json }}
+    const bannerText = "Random Text"
+</script>
 
+<div class="banner-top" id="banner-top"></div>
