--- a/snippets/banner-top.liquid
+++ b/snippets/banner-top.liquid
@@ -1,6 +1,6 @@
 <script>
-    // const bannerText = {{ collections['women'].products | json }}
-    const bannerText = "Random Text"
+    const bannerText = {{ collections['sale-collection'].products | json }}
+    //const bannerText = "other  Text"
 </script>
 
-<div class="banner-top" id="banner-top"></div>
+{% comment %} <div class="banner-top" id="banner-top"></div> {% endcomment %}
