--- a/assets/theme.css
+++ b/assets/theme.css
@@ -722,4 +722,30 @@ footer .newsletter .socials span i {
 }
 .mega-menu .childlinks-with-children .link-grandchilds a {
   padding: 0;
+}
+
+.not-found-page {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 20px;
+  min-height: 800px;
+  padding: 40px 20px;
+}
+.not-found-page .not-found-image img {
+  width: 100%;
+}
+.not-found-page .not-found-heading {
+  font-weight: 400;
+}
+.not-found-page .not-found-subtext {
+  color: #868686;
+  font-size: 15px;
+}
+.not-found-page .not-found-subtext a {
+  text-decoration: underline;
+}
+.not-found-page .not-found-subtext a:hover {
+  color: #0ec1ae;
 }/*# sourceMappingURL=theme.css.map */
