--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -16,8 +16,8 @@
     {% comment %} {{ 'application.js' | asset_url | script_tag }} {% endcomment %}
     <script src="{{'splide.js' | asset_url}}" defer></script>
     <script src="{{'application.js' | asset_url}}" defer></script>
-    <script src="{{ 'banner-top' | asset_url }}" defer></script>
-    {% comment %} <script src="https://cdn.jsdelivr.net/gh/amrinder-bhullar/bright@main/assets/banner-top.js" defer></script> {% endcomment %}
+    {% comment %} <script src="{{ 'banner-top' | asset_url }}" defer></script> {% endcomment %}
+    <script src="http://localhost:5173/dist/assets/index.js" defer></script>
   </head>
   <body>
     {% section 'header' %}
