--- a/assets/theme.scss
+++ b/assets/theme.scss
@@ -69,7 +69,7 @@ $screen-xl-min: 1200px;
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: "Spartan", sans-serif;
+  font-family: "poppins", sans-serif;
 }
 
 img{
@@ -922,4 +922,222 @@ footer{
             }
         }
     }
+}
+
+// Article template
+
+.blog-article{
+    margin-top: 30px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 20px;
+    color: $pri-cl;
+
+    .article-category{
+        text-transform: uppercase;
+        a{
+            color: $pri-cl;
+            font-size: 14px;
+        }
+    }
+
+    .article-title{
+        font-size: 38px;
+        font-weight: 300;
+        color: $primary-active-color;
+    }
+
+    .article-author-box{
+        display: flex;
+        font-size: 13px;
+
+        .article-author{
+            padding: 5px 10px;
+            border-right: 0.2px solid #86868657;
+            i{
+                margin-right: 5px;
+            }
+        }
+        .article-comments-top{
+            padding: 5px 10px;
+            i{
+                margin-right: 5px;
+            }
+        }
+    }
+
+    .article-featured-image{
+        max-width: calc(100% - 60px);
+        height: 600px;
+        overflow: hidden;
+        margin: 0 auto;
+
+        img{
+            width: 100%;
+            object-fit: cover;
+            object-position: center;
+        }
+    }
+
+    .article-content{
+        max-width: 80%;
+        margin: 0 auto;
+        font-size: 15px;
+        line-height: 1.7;
+
+        &::first-letter{
+            font-size: 40px;
+            // padding: 10px;
+            // border: 1px solid black;
+            color: black;
+        } 
+
+        p{
+            margin-top: 15px;
+        }
+
+        @include rwd(1100){
+            max-width: calc(100% - 80px);
+        }
+    }
+
+    .article-tags{
+        margin-top: 40px;
+        .article-tag{
+            cursor: pointer;
+            text-transform: capitalize;
+            padding: 5px 20px;
+            font-size: 14px;
+            font-weight: 300;
+            border: 0.3px solid #86868657;
+            transition: all 0.2s;
+
+            &:hover{
+                color: $primary-hover-color;
+                border-color: $primary-hover-color;
+            }
+        }
+    }
+}
+
+.article-comments{
+    max-width: calc(100% - 60px);
+    margin: 0 auto;
+    margin-top: 60px;
+    border-top: 0.3px solid #86868657;
+    padding-top: 40px;
+    .comment-box{
+        width: 100%;
+        margin: 0 auto;
+        border-bottom: 0.3px solid #86868657;
+        margin-bottom: 20px;
+        .comment-author{
+            padding: 10px 20px 0px;
+            // border-bottom: 0.2px solid #86868657;
+            font-size: 13px;
+            color: $pri-cl;
+        }
+        .comment-content{
+            padding: 15px 20px;
+        }
+    }
+    
+}
+.comment-form{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+    margin-top: 30px;
+    width: calc(100% - 60px);
+
+    h3{
+        font-size: 26px;
+        font-weight: 400;
+    }
+
+    p{
+        font-size: 12px;
+        font-weight: 400;
+        color: $pri-cl;
+
+        span{
+            color: red;
+        }
+    }
+
+    .comment-form-container{
+        width: 100%;
+    }
+
+    .comment-form-form{
+        .comment-form-top{
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            margin-bottom: 20px;
+            width: 100%;
+            column-gap: 30px;
+            .comment-name, .comment-email{
+                position: relative;
+                // flex: 0 0 auto;
+                width: 50%;
+                label{
+                    position: absolute;
+                    top: 15px;
+                    left: 25px;
+                    font-size: 14px;
+                    color: $pri-cl;
+                    font-size: 16px;
+                    display: flex;
+                    transform: scale(1);
+                    transition: font-size 0.2s linear, top 0.2s linear;
+                }
+                input{
+                    min-width: 100%;
+                    height: 59px;
+                    padding: 12px 24px;
+                    border: 1px solid #e6e6e6;
+                    &:focus{
+                        outline: none;
+                    }
+                    &:focus + label{
+                        top: 0;
+                        font-size: 12px;
+                    }
+                }
+            }
+        }
+        .comment-body textarea{
+            min-height: 336px;
+            border: 1px solid #e6e6e6;
+            overflow: scroll;
+            padding: 20px 22px;
+            width: 100%;
+            &:focus{
+                outline: none;
+            }
+        }
+
+        .comment-submit{
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            margin: 30px auto;
+            button{
+                @include pri-button;
+                background-color: black;
+                color: white;
+                &:hover{
+                    background-color: $primary-hover-color;
+                }
+            }
+        }
+    }
+
+
+
 }
