--- a/sections/footer.liquid
+++ b/sections/footer.liquid
@@ -37,31 +37,7 @@
       <li>Contact Us</li>
     </ul>
   </section>
-  <section class="newsletter">
-    <h2>Don't miss out on a sale again.</h2>
-    <p>Sign up now for sale alerts & special offers</p>
-    <div class="newsletter-input">
-      <input type="email" placeholder="Your email address">
-      <button>SUBSCRIBE</button>
-    </div>
-    <div class="socials">
-      <span>
-        <i class="fa-brands fa-facebook-f"></i>
-      </span>
-      <span>
-        <i class="fa-brands fa-twitter"></i>
-      </span>
-      <span>
-        <i class="fa-brands fa-instagram"></i>
-      </span>
-      <span>
-        <i class="fa-brands fa-dribbble"></i>
-      </span>
-      <span>
-        <i class="fa-brands fa-pinterest"></i>
-      </span>
-    </div>
-  </section>
+  {% include 'newsletter' %}
 </footer>
 
 {% schema %}
