--- a/sections/template-article.liquid
+++ b/sections/template-article.liquid
@@ -111,6 +111,7 @@
               <input
                 type="text"
                 name="comment[author]"
+                required
                 id="comment_author">
               <label for="comment_author">Name</label>
             </div>
@@ -118,6 +119,7 @@
               <input
                 type="text"
                 name="comment[email]"
+                required
                 id="comment_email">
               <label for="comment_email">email</label>
             </div>
@@ -126,6 +128,7 @@
             <textarea
               name="comment[body]"
               id="comment_content"
+              required
               placeholder="Your message here..."></textarea>
           </div>
           <div class="comment-submit">
